# manim-euclid-elements

./: .gitignore  .gitmodules  LICENSE  README.md  book-01-proposition-47.json  book-03-proposition-02.json  helper.py  intro.py  merge_videos.sh  proposition.py  pyproject.toml  render_elements.py
