[tool.poetry]
name = "manim-euclid-elements"
version = "0.1.0"
description = "A video rendering of Euclid's Elements using Manim"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "manim_euclid_elements"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
manim-voiceover = {extras = ["azure"], version = "^0.1.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
